cynic-querygen/tests/snapshots/github_tests__add_comment_mutation.snap
---
source: cynic-querygen/tests/github-tests.rs
expression: "document_to_fragment_structs(query, schema,\n                             &QueryGenOptions::default()).expect(\"QueryGen Failed\")"
---
#[cynic::query_module(
    schema_path = r#"schema.graphql"#,
    query_module = "query_dsl",
)]
mod queries {
    use super::{query_dsl, types::*};

    #[derive(cynic::FragmentArguments, Debug)]
    pub struct CommentOnMutationSupportIssueArguments {
        pub comment_body: String,
    }

    #[derive(cynic::QueryFragment, Debug)]
    #[cynic(graphql_type = "Mutation", argument_struct = "CommentOnMutationSupportIssueArguments")]
    pub struct CommentOnMutationSupportIssue {
        #[arguments(input = AddCommentInput { body: args.comment_body.clone(), subject_id: "MDU6SXNzdWU2ODU4NzUxMzQ=".into() })]
        pub add_comment: Option<AddCommentPayload>,
    }

    #[derive(cynic::QueryFragment, Debug)]
    #[cynic(graphql_type = "AddCommentPayload")]
    pub struct AddCommentPayload {
        pub comment_edge: Option<IssueCommentEdge>,
    }

    #[derive(cynic::QueryFragment, Debug)]
    #[cynic(graphql_type = "IssueCommentEdge")]
    pub struct IssueCommentEdge {
        pub node: Option<IssueComment>,
    }

    #[derive(cynic::QueryFragment, Debug)]
    #[cynic(graphql_type = "IssueComment")]
    pub struct IssueComment {
        pub id: cynic::Id,
    }

    #[derive(cynic::InputObject, Debug)]
    #[cynic(graphql_type = "AddCommentInput", rename_all="camelCase")]
    pub struct AddCommentInput {
        pub body: String,
        pub subject_id: cynic::Id,
    }

}

#[cynic::query_module(
    schema_path = r#"schema.graphql"#,
    query_module = "query_dsl",
)]
mod types {
    #[derive(cynic::Scalar, Debug)]
    pub struct Date(String);

    #[derive(cynic::Scalar, Debug)]
    pub struct DateTime(String);

    #[derive(cynic::Scalar, Debug)]
    pub struct GitObjectID(String);

    #[derive(cynic::Scalar, Debug)]
    pub struct GitRefname(String);

    #[derive(cynic::Scalar, Debug)]
    pub struct GitSSHRemote(String);

    #[derive(cynic::Scalar, Debug)]
    pub struct GitTimestamp(String);

    #[derive(cynic::Scalar, Debug)]
    pub struct Html(String);

    #[derive(cynic::Scalar, Debug)]
    pub struct PreciseDateTime(String);

    #[derive(cynic::Scalar, Debug)]
    pub struct Uri(String);

    #[derive(cynic::Scalar, Debug)]
    pub struct X509Certificate(String);

}

mod query_dsl{
    use super::types::*;
    cynic::query_dsl!(r#"schema.graphql"#);
}

